# rossmann-forecasting

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.streamlit  LICENSE  PHASE5_SUMMARY.md  README.md  RUN_PHASE5.md  docker-compose.yml  dvc.yaml  mkdocs.yml  pyproject.toml  run_phase5.py  spec-rossmann-forecasting.md  spec-rossmann-mlops.md
.dvc/: config
.github/: README.md
.github/workflows/: docs.yml  test.yml
config/: best_hyperparameters.json  params.yaml
data/batch_predictions/: README.md  batch_aug_dec_2015.csv
data/processed/: train_clean.parquet  train_clean.parquet.dvc  train_features.parquet.dvc
deployment/: README.md  __init__.py
deployment/api/: __init__.py  main.py  mlflow.db  prediction_logger.py  test_api.sh
deployment/streamlit/: Home.py  __init__.py  run_app.sh
deployment/streamlit/pages/: 1_📈_Predictions.py  2_📚_Documentation.py  2_🔧_Model_Management.py  3_📊_Monitoring.py
deployment/streamlit/utils/: api_client.py  validation.py
docs/: README.md  index.md
docs/api/: data.md  evaluation.md  features.md  models.md  monitoring.md
docs/cicd/: github-actions.md
docs/dataops/: automation.md  best-practices.md  overview.md  scenarios.md  steps.md  validation.md
docs/deployment/: fastapi.md  launcher.md  overview.md  streamlit.md
docs/getting-started/: detailed-setup.md  pre-commit.md  quickstart.md  structure.md  workflow.md
docs/modelops/: overview.md  registry.md  tracking.md  training.md  tuning.md
docs/monitoring/: dashboard.md  drift-detection.md  overview.md
env/: requirements.txt
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: .ge_store_backend_id  features_checkpoint.yml  processed_data_checkpoint.yml  raw_data_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  features_suite.json  processed_data_suite.json  raw_store_suite.json  raw_train_suite.json
great_expectations/gx/expectations/: .ge_store_backend_id
models/final/: ensemble_metadata.json
monitoring/: .gitkeep  README.md
notebooks/: 01-eda-and-cleaning.ipynb  02-feature-engineering.ipynb  03-baseline-models.ipynb  04-advanced-models-and-ensembles.ipynb  04b-hyperparameter-tuning.ipynb  05-final-eval-and-test-simulation.ipynb
outputs/metrics/advanced/: catboost_cv_results.json  lightgbm_tuned_cv_results.json  xgboost_cv_results.json
outputs/metrics/baseline/: lightgbm_baseline_cv_results.json  naive_lastweek_cv_results.json
outputs/metrics/final/: final_metrics.json
outputs/predictions/: final_holdout_predictions.csv
outputs/tuning/: best_hyperparameters.json  ensemble_results.json
scripts/: README.md  dataops_workflow.sh  generate_batch_prediction_data.py  launch_api.sh  launch_dashboard.sh  launch_streamlit.sh  retrain_pipeline.sh  start_mlflow.sh
src/data/: make_dataset.py  prepare_predictions.py  validate_data.py
src/evaluation/: cv.py  metrics.py  reporting.py
src/features/: build_features.py
src/models/: ensemble.py  ensembles.py  model_registry.py  predict.py  train_advanced.py  train_baselines.py  train_ensemble.py  train_final.py  validate_model.py
src/monitoring/: __init__.py  drift_detection.py  generate_reports.py  prepare_reference_data.py
src/utils/: io.py  log.py  mlflow_utils.py
tests/: README.md  __init__.py  conftest.py  test_data_processing.py  test_data_validation.py  test_features.py  test_model_ensemble.py  test_model_registry.py  test_monitoring.py  test_predict.py  test_prepare_predictions.py  test_train_ensemble.py  test_validate_model.py
