[project]
name = "rossmann-forecasting"
version = "1.0.0"
description = "Production ML system for Rossmann sales forecasting with MLOps best practices"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Bradley Boehmke", email = "bradleyboehmke@gmail.com"}
]
license = {text = "MIT"}
keywords = ["machine-learning", "mlops", "forecasting", "time-series", "sales-prediction"]

dependencies = [
    # Core data science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",

    # ML frameworks
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "optuna>=3.3.0",

    # MLOps - Experiment tracking
    "mlflow>=2.8.0",

    # DataOps - Data versioning and validation
    "dvc>=3.0.0",
    "great-expectations>=0.18.0,<1.0.0",  # Pin to 0.x for compatibility with config

    # Deployment
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",

    # Monitoring
    "evidently>=0.4.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",

    # Data handling
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.0",

    # Utilities
    "tqdm>=4.66.0",
    "colorlog>=6.7.0",
    "joblib>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For testing FastAPI

    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "docformatter>=1.7.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "nbconvert>=7.8.0",
]

docs = [
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
]

cloud = [
    # Cloud deployment (optional)
    "boto3>=1.28.0",  # AWS
    "google-cloud-storage>=2.10.0",  # GCP
    "azure-storage-blob>=12.18.0",  # Azure
]

[project.urls]
Homepage = "https://github.com/bradleyboehmke/rossmann-forecasting"
Documentation = "https://github.com/bradleyboehmke/rossmann-forecasting/blob/main/README.md"
Repository = "https://github.com/bradleyboehmke/rossmann-forecasting"
Issues = "https://github.com/bradleyboehmke/rossmann-forecasting/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | build
  | dist
  | notebooks
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file (needed for sys.path.append pattern)
    "C416",  # unnecessary list comprehension
    "UP007", # use X | Y for type annotations (Python 3.10+ style)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "xgboost.*",
    "catboost.*",
    "mlflow.*",
    "great_expectations.*",
    "evidently.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "notebooks", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls
